fix scrolling position when switching videos and remove scrollbar for the search dropdown

--- a/css/all.css
+++ b/css/all.css
@@ -143,7 +143,7 @@ h2 {
   visibility: hidden;
   display: block;
   font-size: 0;
-  content: " ";
+  content: ' ';
   clear: both;
   height: 0;
 }
@@ -316,7 +316,7 @@ h2 {
 
 .card-title {
   font-size: 2em;
-  font-family: "Open Sans", sans-serif;
+  font-family: 'Open Sans', sans-serif;
   margin: 0;
   text-align: center;
 }
@@ -348,6 +348,10 @@ h2 {
   background-color: black;
 }
 
+.v-select > .dropdown-menu::-webkit-scrollbar {
+  width: 0;
+}
+
 .v-select > .dropdown-menu > li.highlight {
   background-color: #4e4e4e;
 }
@@ -362,4 +366,8 @@ h2 {
 
 .v-select .dropdown-toggle {
   border: 0 !important;
+}
+
+.v-select .open-indicator {
+  display: none !important;
 }
